# lib/api-spec/openapi.yaml
@@ -1002,7 +1002,7 @@ components:
 
     SubjectInput:
       type: object
-      required: [name, description, icon, color]
+      required: [name]
       properties:
         name:
           type: string
@@ -1012,6 +1012,8 @@ components:
           type: string
         color:
           type: string
+        isActive:
+          type: boolean
         order:
           type: integer
 
